try to fix the subscribe button on iOS

--- a/_sass/_form.scss
+++ b/_sass/_form.scss
@@ -113,6 +113,8 @@ form {
             padding: 0.3em;
             line-height: 1em;
             border-radius: 0;
+            -webkit-border-radius: 0;
+            -webkit-appearance: none !important;
             width: 96%;
             &:hover {
                 background: rgba($black-color, .3 )
